--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@moralisweb3/next": "^2.22.4",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
@@ -17,6 +18,7 @@
     "chart.js": "^4.3.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "moralis": "^2.22.4",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
