--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@moralisweb3/common-evm-utils": "^2.22.4",
     "@moralisweb3/next": "^2.22.4",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
