--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
 # dependencies
 node_modules/
 /node_modules
@@ -17,6 +18,7 @@ out/
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -29,6 +31,8 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
+/.env
 
 # vercel
 .vercel
@@ -36,3 +40,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
